Fixed blurry images by removing container border

--- a/css/style.css
+++ b/css/style.css
@@ -2069,7 +2069,7 @@ body.bg-dark.ara {
 	box-shadow: 0px 0px 50px rgba(220, 220, 220, 0.29);
 	/* width: auto; */
 	display: inline-block;
-	border: 1px solid #dcdcdc;
+	/* border: 1px solid #dcdcdc; */
 	margin: 0 auto;
 	border-radius: 0px;
 	overflow-y: auto;
